--- a/examples/9-service-nginx-nodeport.yaml
+++ b/examples/9-service-nginx-nodeport.yaml
@@ -19,9 +19,15 @@ spec:
       nodeSelector:
         node: master-node
       tolerations:
-        - key: node-role.kubernetes.io/control-plane
-          operator: Exists
-          effect: NoSchedule
+        - key: "node-role.kubernetes.io/control-plane"
+          operator: "Exists"
+          effect: "NoSchedule"
+      #   - key: "node-role.kubernetes.io/worker-a"
+      #     operator: "Exists"
+      #     effect: "NoSchedule"
+      #   - key: "node-role.kubernetes.io/worker-b"
+      #     operator: "Exists"
+      #     effect: "NoSchedule"
       containers:
         - name: nginx
           image: nginx
@@ -43,3 +49,25 @@ spec:
     - port: 8080
       targetPort: 80
       nodePort: 30009
+
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: curl-pod
+  labels:
+    name: curl-pod
+spec:
+  # tolerations:
+  #   - key: "node-role.kubernetes.io/control-plane"
+  #     operator: "Exists"
+  #     effect: "NoSchedule"
+  #   - key: "node-role.kubernetes.io/worker-a"
+  #     operator: "Exists"
+  #     effect: "NoSchedule"
+  #   - key: "node-role.kubernetes.io/worker-b"
+  #     operator: "Exists"
+  #     effect: "NoSchedule"
+  containers:
+    - name: curl-pod
+      image: xhilmi/curl-pod
