--- a/examples/9-service-nginx.yaml
+++ b/examples/9-service-nginx.yaml
@@ -41,13 +41,13 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: curl-pod
+  name: nginx-curl
   labels:
-    name: curl-pod
+    name: nginx-curl
 spec:
   containers:
-    - name: curl-pod
-      image: xhilmi/curl-pod
+    - name: nginx-curl
+      image: xhilmi/nginx-curl
 
 
 
