--- a/examples/10-multi-container-pod.yaml
+++ b/examples/10-multi-container-pod.yaml
@@ -3,50 +3,52 @@
 apiVersion: apps/v1
 kind: ReplicaSet
 metadata:
-  name: nginx-rs
-  labels: 
-    desc: nginx-rs
-  annotations:
-    desc: nginx-rs
+  name: nginx-node-rs
+  labels:
+    name: nginx-node-rs
 spec:
   replicas: 3
   selector:
-    matchLabels:
-      app: nginx
+    matchExpressions:
+      - key: app
+        operator: In
+        values:
+          - nginx-node
   template:
     metadata:
-      name: nginx
+      name: nginx-node
       labels:
-        app: nginx
-    spec: 
-      tolerations:
-        - key: node-role.kubernetes.io/control-plane
-          operator: Exists
-          effect: NoSchedule
-      nodeSelector:
-        node: master-node
-        # node: cluster-node-a
+        app: nginx-node
+    spec:
+      # nodeSelector:
+      #   node: master-node
       containers:
         - name: nginx
           image: nginx
           ports:
             - containerPort: 80
+        - name: node
+          image: xhilmi/nodejs-web
+          ports:
+            - containerPort: 3000
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-svc
+  name: nginx-node-svc
   labels:
-    desc: nginx-svc
-  annotations:
-    desc: nginx-svc
+    name: nginx-node-svc
 spec:
   selector:
-    app: nginx
+    app: nginx-node
   ports:
-    - port: 8080
+    - name: nginx
+      port: 8080
       targetPort: 80
+    - name: node
+      port: 3030
+      targetPort: 3000
 
 ---
 apiVersion: v1
@@ -54,31 +56,14 @@ kind: Pod
 metadata:
   name: nginx-curl
   labels:
-    desc: nginx-curl
-  annotations:
-    desc: nginx-curl
+    name: nginx-curl
 spec:
-  nodeSelector:
-    node: master-node
-    # node: cluster-node-b
   tolerations:
     - key: node-role.kubernetes.io/control-plane
       operator: Exists
       effect: NoSchedule
+  nodeSelector:
+    node: master-node
   containers:
     - name: nginx-curl
       image: xhilmi/nginx-curl
-
-
-
-
-
-
-
-
-
-
-
-
-
-
