--- a/examples/9-service-nginx-nodeport.yaml
+++ b/examples/9-service-nginx-nodeport.yaml
@@ -1,3 +1,4 @@
+# xhilmi : https://s.id/hilmi
 ---
 apiVersion: apps/v1
 kind: ReplicaSet
@@ -54,9 +55,9 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: curl-pod
+  name: nginx-curl
   labels:
-    name: curl-pod
+    name: nginx-curl
 spec:
   # tolerations:
   #   - key: "node-role.kubernetes.io/control-plane"
@@ -69,5 +70,5 @@ spec:
   #     operator: "Exists"
   #     effect: "NoSchedule"
   containers:
-    - name: curl-pod
-      image: xhilmi/curl-pod
+    - name: nginx-curl
+      image: xhilmi/nginx-curl
