--- a/examples/22-volume-sharing.yaml
+++ b/examples/22-volume-sharing.yaml
@@ -1,27 +1,27 @@
 # xhilmi : https://s.id/hilmi
 ---
 apiVersion: apps/v1
-kind: Pod
+kind: ReplicaSet
 metadata:
-  name: volume-nodejs
+  name: nginx-rs
   labels:
-    name: volume-nodejs
+    name: nginx-rs
 spec:
-  replicas: 2
+  replicas: 3
   selector:
     matchExpressions: 
       - key: app
         operator: In
         values:
-          - nodejs
+          - nginx
   template:
     metadata:
-      name: nodejs
+      name: nginx
       labels:
-        app: nodejs
+        app: nginx
     spec:
       volumes:
-        - name: nodejs
+        - name: storage
           emptyDir: {}
       restartPolicy: Always
       nodeSelector:
@@ -34,16 +34,37 @@ spec:
         - name: nodejs
           image: xhilmi/nodejs-writer
           volumeMounts:
-            - name: nodejs
+            - name: storage
               mountPath: /app/html
+        - name: nginx
+          image: nginx:alpine
+          volumeMounts:
+            - name: storage
+              mountPath: /usr/share/nginx/html
           ports:
             - containerPort: 80
-          readinessProbe:
-            httpGet:
-              path: /
-              port: 80
-            initialDelaySeconds: 3
-            periodSeconds: 3
-            timeoutSeconds: 5
-            successThreshold: 2
-            failureThreshold: 5
+          # readinessProbe:
+          #   httpGet:
+          #     path: /
+          #     port: 80
+          #   initialDelaySeconds: 3
+          #   periodSeconds: 3
+          #   timeoutSeconds: 5
+          #   successThreshold: 2
+          #   failureThreshold: 5
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-svc
+  labels:
+    name: nginx-svc
+spec:
+  type: NodePort
+  selector:
+    name: nginx
+  ports:
+    - port: 8000
+      targetPort: 80
+      nodePort: 30001
