--- a/examples/25-secret.yaml
+++ b/examples/25-secret.yaml
@@ -5,7 +5,7 @@ kind: ConfigMap
 metadata:
   name: nodejs-env-configmap
 data:
-  APPLICATION: MY NODEJS APPS
+  # APPLICATION: MY NODEJS APPS
   VERSION: 1.0.1
 
 ---
@@ -13,10 +13,11 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: nodejs-env-secret
-data:
-  ENV: base64(VALUE)
+# data:
+#   ENV: base64(VALUE)
 stringData:
-  VERSION: 1.0.1
+  APPLICATION: MY NODEJS APPS
+  # VERSION: 1.0.1
 
 ---
 apiVersion: apps/v1
